--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
-  "name": "smartchain",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "vitest",
-    "start": "node src/server.mjs",
-    "dev": "nodemon src/server.mjs"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "dependencies": {
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "mongoose": "^8.15.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.10",
-    "supertest": "^7.1.1",
-    "vitest": "^3.1.4"
-  }
+	"name": "smartchain",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "vitest",
+		"start": "node src/server.mjs",
+		"dev-node": "cross-env GENERATE_NODE_PORT='true' nodemon src/server.mjs",
+		"dev": "npm run start-redis && nodemon src/server.mjs",
+		"start-redis": "redis-server --daemonize yes"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"type": "commonjs",
+	"dependencies": {
+		"dotenv": "^16.5.0",
+		"express": "^5.1.0",
+		"mongoose": "^8.15.0",
+		"redis": "^2.8.0"
+	},
+	"devDependencies": {
+		"cross-env": "^7.0.3",
+		"nodemon": "^3.1.10",
+		"supertest": "^7.1.1",
+		"vitest": "^3.1.4"
+	}
 }
