--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
 	"type": "commonjs",
 	"dependencies": {
 		"dotenv": "^16.5.0",
+		"elliptic": "^6.6.1",
 		"express": "^5.1.0",
 		"mongoose": "^8.15.0",
-		"redis": "^2.8.0"
+		"redis": "^2.8.0",
+		"uuid": "^11.1.0"
 	},
 	"devDependencies": {
 		"cross-env": "^7.0.3",
